Se agrego condicional

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	
 </head>
 <body>
-	<script src="problema 2C.js"></script>
+	<script src="calculator.js"> </script>
 </body>
 </html>
